<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.address.editaddress.EditAddress">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Shopping"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_close"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/location_information"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

        <ImageButton
            android:id="@+id/ibOpenMap"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/europe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:maxLines="2"
            android:padding="2dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/ibOpenMap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ibOpenMap" />


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/mobile_number"
            app:layout_constraintStart_toStartOf="@+id/tvAddress"
            app:layout_constraintTop_toBottomOf="@+id/ibOpenMap" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/ibOpenMap"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/textviewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="@+id/etPhoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/etPhoneNumber"
            app:layout_constraintStart_toStartOf="@+id/textviewName"
            app:layout_constraintTop_toBottomOf="@+id/textviewName" />

        <Button
            android:id="@+id/btnSaveAddressInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/save_information"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>